2008-05-23 Chris Morley

	* src/formats/xml/cmlformat.cpp: Applied Jean Brefort's patch to fix
	leading spaces on atom refs bug #1965086
	
2005-05-23  Noel O'Boyle  <baoilleach@gmail.com>

	* Pybel: minor fix to test suite for running outside cinfony

2005-05-23  Noel O'Boyle  <baoilleach@gmail.com>

	* Pybel: Synching with cinfony, and getting ready for release as 1.3

2008-05-22 Chris Morley

	* data/atomtyp.txt: remove
	  IMPVAL  [N^2-,N^3-]		2
	and add
	  IMPVAL	[N-]			2
	so that O1S(=O)(=O)[N-]C(=O)C=C1C.[K+] is interpreted correctly.
 
	* src/formats/pngformat.cpp: minor documentation change

2005-05-22  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Fixed version string in CMake. Also added policy
	stuff for CMake 2.6 and the option to set the library directory.

2008-05-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: copy OBChiralData for all atoms in operator=.

	* include/openbabel/builder.h, src/builder.cpp: Added
	Swap(...) : swap the position of two substituents (can be used to
	invert chiral centers)
	CorrectAtomChirality(...) : use the (atomreftype) input references to
	make sure the molecule has the right chirality as specified by
	IsClockwise() / IsAntiClockwise().
	CorrectBondChirality(...) : use the IsUp() / IsDown() values to rotate
	the bonds if needed.

2008-05-20  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	Changes from avogadro win32 build:

	* include/openbabel/obutil.h: Change std::min(a,b) into std::min<const
	double>(a,b).

	* src/mol.cpp: OBMol::FindChildren was iterating over an atom's bonds
	in a wrong way.

2008-05-19  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: rename _T to
	_temp. (_T is more likely to be defined elsewhere compared to _temp).

2008-05-17  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/grid.h, src/grid.cpp,
	include/openbabel/griddata.h, src/griddata.cpp: Some 'const'
	updates.
